Fix weird overflow scroll bug in firefox

--- a/web/_css/style.css
+++ b/web/_css/style.css
@@ -36,7 +36,6 @@ html, body{
 	min-width: 100%;
 	height: 100%;
 	width: 100%;
-	overflow: hidden;
 }
 
 body{
@@ -44,6 +43,10 @@ body{
 	/*height: 100vh;*/
 	/*width: 100%;*/
 	/*width: 100vw;*/
+
+	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 	
 	font-family: sans;
 	background-color: #111111;
@@ -51,10 +54,12 @@ body{
 }
 
 #wrapper{
-	min-height: 100%;
-	min-width: 100%;
-	height: 100%;
-	width: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	overflow: hidden;
 	overflow-x: hidden;
 	overflow-y: hidden;
 }
@@ -236,6 +241,8 @@ optgroup{
 	margin-left: 320px;
 
 	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 #innerContainer{
